Closer to ironing out all the bugs
